--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                         laggards from catching up.
                     </p>
                     <p class="presentationText">
-                        Presentations: Stanford GSB Rising Stars (2021), International Industrial Organization 
-                        Conference (2022), UPenn (2022)
+                        Presentations: Stanford GSB Rising Scholars (2020), International Industrial Organization 
+                        Conference (2022)
                     </p>
                 </div>
                 <div class="researchPaper">
