--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
                 <h3 class="name">JUAN SAGREDO</h3>
                 <div class="rightNavBar">
                     <a class="navLinks hover-underline-animation" href="#research">Research</a>
-                    <p class="navLinks hover-underline-animation">CV</p>
-                    <p class="navLinks hover-underline-animation">Teaching</p>
+                    <a class="navLinks hover-underline-animation" href="./files/CV_official_JS.pdf">CV</a>
                 </div>
             </div>
             <div class="bioContainer">
@@ -41,7 +40,7 @@
                     </p>
                     <br />
                     <p>
-                        Find my research below and my updated CV here. Email: sagju [at] sas.upenn.edu
+                        Find my research below and my updated CV <a href="./files/CV_official_JS.pdf">here</a>. Email: sagju [at] sas.upenn.edu
                     </p>
                 </div>
             </div>
@@ -50,36 +49,42 @@
                 <div class="researchPaper">
                     <a class="researchTitle" href="./files/jmp_oct_2023.pdf">The Visible Hand <span class="jobMarketIndicator">- Job Market Paper</span></a>
                     <p class="abstractText">
-                        Technological innovations have allowed some sellers to collect detailed information about buyers.
-                        We study these changes in the precision of sellers' demand information. Precision plays a central role
-                        in the incentive to profit through more efficient trade versus more extractive trade 
-                        - impacting aggregate surplus and its distribution. When buyers' preferences are more heterogeneous, 
-                        imprecisely informed sellers prioritize extraction despite limiting trade. Precision relaxes this tension, 
-                        allowing sellers to target extraction when it is less obstructive. It increases aggregate surplus and
-                        benefits (hurts) buyers with a low (high) willingness to pay. However, when buyers are more homogeneous,
-                        imprecisely informed sellers prioritize trade, and precision can reorient them towards extraction,
-                        even decreasing aggregate surplus and hurting all buyers. In either case, precision raises recipient sellers' profits,
-                        but it can benefit or hurt other sellers. The more competitive a market and the lower the precision of
-                        sellers who upskill, the worse the profit externalities; nevertheless, these can be positive and allow all 
-                        sellers to become more profitable. However, competition can also protect precision leaders by discouraging
-                        laggards from catching up.
+                        Technological innovations have allowed some sellers to collect detailed information about 
+                        buyers. We study the effects of these changes in the heterogeneous precision of sellers' 
+                        demand information. Precision plays a central role in the incentive to profit through more 
+                        efficient trade versus more extractive trade - impacting total surplus and its distribution. 
+                        The more heterogeneous buyers' preferences and the flatter sellers' costs, the greater the 
+                        disposition of imprecisely informed sellers to profit through extraction despite limiting 
+                        trade. Precision relaxes this tension, allowing sellers to target extraction when it is less 
+                        damaging to trade. It increases aggregate surplus and benefits (hurts) buyers with a low (high) 
+                        willingness to pay. However, in alternate settings, imprecisely informed sellers are 
+                        predisposed to profit through trade, and expertise can reorient them toward extraction to 
+                        such an extent that it decreases the surplus of all buyers along with the aggregate. In either 
+                        case, precision makes sellers who acquire it more profitable, but it can benefit or hurt other 
+                        sellers. The more competitive an economy and the lower the precision of sellers who upskill, 
+                        the worse the profit externalities; nevertheless, externalities can be positive and allow all 
+                        sellers to become more profitable. And yet, competition can also protect precision leaders by 
+                        discouraging laggards from catching up.
                     </p>
                     <p class="presentationText">
-                        Presentations: Stanford GSB Rising Scholars (2020), International Industrial Organization 
-                        Conference (2022)
+                        Presentations: Stanford GSB Rising Stars (2021), International Industrial Organization 
+                        Conference (2022), UPenn (2022)
                     </p>
                 </div>
                 <div class="researchPaper">
                     <a class="researchTitle" href="./files/second_paper_draft.pdf">The Political Economy of Pandemics</a>
                     <p class="abstractText">
-                        The COVID-19 pandemic presented an unprecedented challenge. Policymakers had
-                        to manage a crisis with little information but under high public scrutiny,
-                        particularly via cross-regional comparisons. We show how comparisons induce
-                        herding of policymakers with popularity concerns and discuss its extent under
-                        different scenarios. Policy contagion is stronger when shocks are sequential,
-                        more correlated, and popularity concerns are larger. Ex ante,
-                        it improves welfare, by disciplining biased policy agendas, but ex post,
-                        it can decrease welfare, by incentivizing acquiescing to a biased public consensus.
+                        The COVID-19 policy responses represent an unprecedented challenge. Policymakers
+                        worldwide, have to react fast to a totally new type of crisis under enhanced
+                        public scrutiny, as their policies are immediately compared across countries. We
+                        show how relative comparisons induce herding when policymakers are concerned
+                        by their popularity, and we discuss its extent under different scenarios. This policy
+                        contagion induce some countries to choose less efficient policies than they would
+                        in isolation or when facing a less correlated shock. Further, when shocks arrive sequentially,
+                        first movers prompt coordination on their policies of later movers, albeit
+                        inducing less distortions than when shocks are simultaneous. On average, however,
+                        the policy coordination triggered by a common pandemic shock improves
+                        welfare by disciplining biased policy agendas.
                     </p>
                 </div>
             </div>
