--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="researchContainer" id="research">
                 <h3 class="researchHeader">Research</h3>
                 <div class="researchPaper">
-                    <a class="researchTitle" href="./files/jmp_oct_2023.pdf">The Visible Hand <span class="jobMarketIndicator">- Job Market Paper</span></a>
+                    <a class="researchTitle" href="./files/jmp.pdf">The Visible Hand <span class="jobMarketIndicator">- Job Market Paper</span></a>
                     <p class="abstractText">
                         Technological innovations have allowed some sellers to collect detailed information about 
                         buyers. We study the effects of these changes in the heterogeneous precision of sellers' 
