--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </p>
                     <br />
                     <p>
-                        Find my research below and my updated CV <a href="./files/CV_official_JS.pdf">here</a>. Email: sagju [at] sas.upenn.edu
+                        Find my research below and my updated CV <a href="./files/cv_juan_sagredo.pdf">here</a>. Email: sagju [at] sas.upenn.edu
                     </p>
                 </div>
             </div>
