--- a/index.html
+++ b/index.html
@@ -67,24 +67,19 @@
                         discouraging laggards from catching up.
                     </p>
                     <p class="presentationText">
-                        Presentations: Stanford GSB Rising Stars (2021), International Industrial Organization 
-                        Conference (2022), UPenn (2022)
+                        Presentations: Stanford GSB Rising Scholars (2020), International Industrial Organization 
+                        Conference (2022)
                     </p>
                 </div>
                 <div class="researchPaper">
                     <a class="researchTitle" href="./files/second_paper_draft.pdf">The Political Economy of Pandemics</a>
                     <p class="abstractText">
-                        The COVID-19 policy responses represent an unprecedented challenge. Policymakers
-                        worldwide, have to react fast to a totally new type of crisis under enhanced
-                        public scrutiny, as their policies are immediately compared across countries. We
-                        show how relative comparisons induce herding when policymakers are concerned
-                        by their popularity, and we discuss its extent under different scenarios. This policy
-                        contagion induce some countries to choose less efficient policies than they would
-                        in isolation or when facing a less correlated shock. Further, when shocks arrive sequentially,
-                        first movers prompt coordination on their policies of later movers, albeit
-                        inducing less distortions than when shocks are simultaneous. On average, however,
-                        the policy coordination triggered by a common pandemic shock improves
-                        welfare by disciplining biased policy agendas.
+                        The COVID-19 pandemic presented an unprecedented challenge. Policymakers had to manage a crisis with
+                        little information but under high public scrutiny, particularly via cross-regional comparisons. We show
+                        how comparisons induce herding of policymakers with popularity concerns and discuss its extent under
+                        different scenarios. Policy contagion is stronger when shocks are sequential, more correlated, and
+                        popularity concerns are larger. Ex ante, it improves welfare, by disciplining biased policy agendas,
+                        but ex post, it can decrease welfare, by incentivizing acquiescing to a biased public consensus.
                     </p>
                 </div>
             </div>
