--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
                 </div>
                 <div class="researchPaper">
                     <a class="researchTitle" href="./files/second_paper_draft.pdf">The Political Economy of Pandemics</a>
+                    <p class="coauthorText">
+                        with H. Herrera and G. Ordonez
+                    </p>
                     <p class="abstractText">
                         The COVID-19 pandemic presented an unprecedented challenge. Policymakers had to manage a crisis with
                         little information but under high public scrutiny, particularly via cross-regional comparisons. We show
