--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <p>Welcome!</p>
                     <br />
                     <p>
-                        I am a PhD candidate at the University of Pennsylvania under the supervision of Guillermo Ordonez,
+                        I am a PhD candidate at the University of Pennsylvania under the supervision of Guillermo Ordoñez,
                         with an expected graduation date of May 2024. I am currently on the 2023-2024 job market and will be
                         available for interviews.
                     </p>
@@ -74,7 +74,7 @@
                 <div class="researchPaper">
                     <a class="researchTitle" href="./files/second_paper_draft.pdf">The Political Economy of Pandemics</a>
                     <p class="coauthorText">
-                        with H. Herrera and G. Ordonez
+                        with H. Herrera and G. Ordoñez
                     </p>
                     <p class="abstractText">
                         The COVID-19 pandemic presented an unprecedented challenge. Policymakers had to manage a crisis with
