--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <h3 class="name">JUAN SAGREDO</h3>
                 <div class="rightNavBar">
                     <a class="navLinks hover-underline-animation" href="#research">Research</a>
-                    <a class="navLinks hover-underline-animation" href="./files/CV_official_JS.pdf">CV</a>
+                    <a class="navLinks hover-underline-animation" href="./files/cv_juan_sagredo.pdf">CV</a>
                 </div>
             </div>
             <div class="bioContainer">
@@ -40,7 +40,7 @@
                     </p>
                     <br />
                     <p>
-                        Find my research below and my updated CV <a href="./files/cv_juan_sagredo.pdf">here</a>. Email: sagju [at] sas.upenn.edu
+                        Email: sagju [at] sas.upenn.edu
                     </p>
                 </div>
             </div>
