--- a/index.html
+++ b/index.html
@@ -47,24 +47,9 @@
             <div class="researchContainer" id="research">
                 <h3 class="researchHeader">Research</h3>
                 <div class="researchPaper">
-                    <a class="researchTitle" href="./files/jmp.pdf">The Visible Hand <span class="jobMarketIndicator">- Job Market Paper</span></a>
+                    <a class="researchTitle" href="./files/jmp.pdf">The Visible Hand: Price Discrimination under Heterogeneous Precision <span class="jobMarketIndicator">- Job Market Paper</span></a>
                     <p class="abstractText">
-                        Technological innovations have allowed some sellers to collect detailed information about 
-                        buyers. We study the effects of these changes in the heterogeneous precision of sellers' 
-                        demand information. Precision plays a central role in the incentive to profit through more 
-                        efficient trade versus more extractive trade - impacting total surplus and its distribution. 
-                        The more heterogeneous buyers' preferences and the flatter sellers' costs, the greater the 
-                        disposition of imprecisely informed sellers to profit through extraction despite limiting 
-                        trade. Precision relaxes this tension, allowing sellers to target extraction when it is less 
-                        damaging to trade. It increases aggregate surplus and benefits (hurts) buyers with a low (high) 
-                        willingness to pay. However, in alternate settings, imprecisely informed sellers are 
-                        predisposed to profit through trade, and expertise can reorient them toward extraction to 
-                        such an extent that it decreases the surplus of all buyers along with the aggregate. In either 
-                        case, precision makes sellers who acquire it more profitable, but it can benefit or hurt other 
-                        sellers. The more competitive an economy and the lower the precision of sellers who upskill, 
-                        the worse the profit externalities; nevertheless, externalities can be positive and allow all 
-                        sellers to become more profitable. And yet, competition can also protect precision leaders by 
-                        discouraging laggards from catching up.
+                        Technological innovations have allowed some sellers to collect detailed information about buyers. We study these changes in a standard search-theoretic model of imperfect competition, featuring buyers with heterogeneous private valuations for quality, and introduce sellers who observe valuation signals of heterogeneous precision. Signals induce third-degree price discrimination, and their precision largely dictates whether they are used to increase trade versus increase markups - impacting aggregate surplus and its distribution. When valuations are more heterogeneous, imprecisely informed sellers prioritize high-markups despite limiting trade, and precision relaxes this tension, allowing them to pursue high-markups when it is least obstructive, and encouraging them to extend low-markup offers that increase trade upon signals indicative of low valuation - increasing aggregate surplus and benefiting (hurting) buyers with a low (high) valuation. However, when valuations are more homogeneous, imprecisely informed sellers prioritize trade, and precision can encourage them to extend high-markup offers that limit trade upon signals indicative of high valuation, hurting all buyers and even decreasing aggregate surplus. In either case, additional precision makes sellers more profitable, but its effect on competitors can be positive or negative. The more competitive a market and the lower the precision of sellers who acquire it, the worse its profit externalities; nevertheless, these can be positive and allow all sellers to benefit.
                     </p>
                     <p class="presentationText">
                         Presentations: Stanford GSB Rising Scholars (2020), International Industrial Organization 
