--- a/index.html
+++ b/index.html
@@ -49,21 +49,7 @@
                 <div class="researchPaper">
                     <a class="researchTitle" href="./files/jmp.pdf">The Visible Hand: Price Discrimination under Heterogeneous Precision <span class="jobMarketIndicator">- Job Market Paper</span></a>
                     <p class="abstractText">
-                        Technological innovations have allowed some sellers to collect detailed information about buyers.
-We study these changes in a standard search-theoretic model of imperfect competition,
-featuring buyers with heterogeneous private valuations for quality, and introduce sellers who
-observe valuation signals of heterogeneous precision. Signals induce third-degree price discrimination,
-and their precision largely dictates whether they are used to increase trade or increase
-markups - impacting aggregate surplus and its distribution. When buyers' valuations are more
-heterogeneous, imprecisely informed sellers prioritize high-markups despite limiting trade, and
-precision relaxes this tension, not only allowing them to pursue high-markups when it is least
-obstructive but also primarily incentivizing low-markup o ers that increase trade upon signals
-indicative of low valuation - increasing aggregate surplus and bene ting (hurting) buyers with
-a low (high) valuation. However, when valuations are more homogeneous, imprecisely informed
-sellers prioritize trade, and precision can primarily incentivize high-markup o ers that limit trade
-upon signals indicative of high valuation, hurting all buyers and even decreasing aggregate surplus.
-In either case, precision makes sellers more pro table, but its e ect on competitors can be
-positive or negative. Generally, competitors su er (bene t) when laggards (leaders) gain precision.
+                        Technological innovations have allowed some sellers to collect detailed information about buyers. We study these changes in a standard search-theoretic model of imperfect competition, featuring buyers with heterogeneous private valuations for quality, and introduce sellers who observe valuation signals of heterogeneous precision. Signals induce third-degree price discrimination, and their precision largely dictates whether they are used to increase trade or increase markups - impacting aggregate surplus and its distribution. When buyers' valuations are more heterogeneous, imprecisely informed sellers prioritize high markups despite limiting trade, and precision relaxes this tension, not only allowing them to pursue high markups when it is least obstructive but also primarily incentivizing low markup offers that increase trade upon signals indicative of low valuation - increasing aggregate surplus and benefiting (hurting) buyers with a low (high) valuation. However, when valuations are more homogeneous, imprecisely informed sellers prioritize trade, and precision can primarily incentivize high markup offers that limit trade upon signals indicative of high valuation, hurting all buyers and even decreasing aggregate surplus. In either case, precision makes sellers more profitable, but its effect on competitors can be positive or negative. Generally, competitors suffer (benefit) when laggards (leaders) gain precision.
                     </p>
                     <p class="presentationText">
                         Presentations: Stanford GSB Rising Scholars (2020), International Industrial Organization 
