--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
     <title>Juan Sagredo</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DNCLPM64ML"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DNCLPM64ML');
+</script>
 <html>
     <body>
         <div class="contentColumn">
