--- a/index.html
+++ b/index.html
@@ -42,10 +42,8 @@
                     <p>
                         I am an applied theorist broadly interested in information economics. My work
                         has focused on two developments where the nature of information greatly affected
-                        business and policy: (1) the boom of data-intensive practices among firms and (2)
-                        the highly visible but sparsely informed management of the COVID-19 pandemic. These
-                        papers are initial steps to a broader research agenda in information design, information markets,
-                        and the economics of social data.
+                        business and policy: (1) the boom of predictive practices by firms and (2)
+                        the highly visible but sparsely informed management of the COVID-19 pandemic.
                     </p>
                     <br />
                     <p>
