--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <br />
                     <p>
                         I am a PhD candidate at the University of Pennsylvania under the supervision of Guillermo Ordoñez,
-                        with an expected graduation date of May 2024. I am currently on the 2023-2024 job market and will be
+                        with an expected graduation date of May 2024. I am currently on the 2023-2024 job market and
                         available for interviews.
                     </p>
                     <br />
