--- a/index.html
+++ b/index.html
@@ -35,12 +35,11 @@
                     <br />
                     <p>
                         I am a PhD candidate at the University of Pennsylvania under the supervision of Guillermo Ordoñez,
-                        with an expected graduation date of May 2024. I am currently on the 2023-2024 job market and
-                        available for interviews.
+                        with an expected graduation date of May 2024 and available for interviews.
                     </p>
                     <br />
                     <p>
-                        I am an applied theorist broadly interested in information economics. My work
+                        My specialization is information economics but I am broadly interested in applied theory. My work
                         has focused on two developments where the nature of information greatly affected
                         business and policy: (1) the boom of predictive practices by firms and (2)
                         the highly visible but sparsely informed management of the COVID-19 pandemic.
