--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                     <p>Welcome!</p>
                     <br />
                     <p>
-                        I am a PhD candidate at the University of Pennsylvania under the supervision of Guillermo Ordoñez,
+                        I am a PhD candidate at the University of Pennsylvania, under the supervision of Guillermo Ordoñez,
                         with an expected graduation date of May 2024 and available for interviews.
                     </p>
                     <br />
                     <p>
-                        My specialization is information economics but I am broadly interested in applied theory. My work
+                        My specialization is information economics but am broadly interested in applied theory. My work
                         has focused on two developments where the nature of information greatly affected
                         business and policy: (1) the boom of predictive practices by firms and (2)
                         the highly visible but sparsely informed management of the COVID-19 pandemic.
