--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                     <br />
                     <p>
                         I am a PhD candidate at the University of Pennsylvania, under the supervision of Guillermo Ordoñez,
-                        with an expected graduation date of May 2024 and available for interviews.
+                        with an expected graduation date of May 2024 and am available for interviews.
                     </p>
                     <br />
                     <p>
-                        My specialization is information economics but am broadly interested in applied theory. My work
+                        My specialization is information economics but I am broadly interested in applied theory. My research
                         has focused on two developments where the nature of information greatly affected
                         business and policy: (1) the boom of predictive practices by firms and (2)
                         the highly visible but sparsely informed management of the COVID-19 pandemic.
