--- a/index.html
+++ b/index.html
@@ -34,15 +34,8 @@
                     <p>Welcome!</p>
                     <br />
                     <p>
-                        I am a PhD candidate at the University of Pennsylvania, under the supervision of Guillermo Ordoñez,
-                        with an expected graduation date of May 2024 and am available for interviews.
-                    </p>
-                    <br />
-                    <p>
-                        My specialization is information economics but I am broadly interested in applied theory. My research
-                        has focused on two developments where the nature of information greatly affected
-                        business and policy: (1) the boom of predictive practices by firms and (2)
-                        the highly visible but sparsely informed management of the COVID-19 pandemic.
+                        I am an Economist at Keystone Strategy's CoreAI group. My interests are 
+                        applied theory, in general, and information economics, in particular.
                     </p>
                     <br />
                     <p>
@@ -53,7 +46,7 @@
             <div class="researchContainer" id="research">
                 <h3 class="researchHeader">Research</h3>
                 <div class="researchPaper">
-                    <a class="researchTitle" href="./files/jmp.pdf">The Visible Hand: Price Discrimination under Heterogeneous Precision <span class="jobMarketIndicator">- Job Market Paper</span></a>
+                    <a class="researchTitle" href="./files/jmp.pdf">The Visible Hand: Price Discrimination under Heterogeneous Precision</a>
                     <p class="abstractText">
                         Technological innovations have allowed some sellers to collect detailed information about buyers. I study these changes in a standard search-theoretic model of imperfect competition, featuring buyers with heterogeneous private valuations for quality, and introduce sellers who observe valuation signals of heterogeneous precision. Signals induce third-degree price discrimination, and their precision largely dictates whether they are used to increase trade or increase markups - impacting aggregate surplus and its distribution. When buyers' valuations are more heterogeneous, imprecisely informed sellers prioritize high markups despite limiting trade, and precision relaxes this tension, not only allowing them to pursue high markups when it is least obstructive but also primarily incentivizing low markup offers that increase trade upon signals indicative of low valuation - increasing aggregate surplus and benefiting (hurting) buyers with a low (high) valuation. However, when valuations are more homogeneous, imprecisely informed sellers prioritize trade, and precision can primarily incentivize high markup offers that limit trade upon signals indicative of high valuation, hurting all buyers and even decreasing aggregate surplus. In either case, precision makes sellers more profitable, but its effect on competitors can be positive or negative. Generally, competitors suffer (benefit) when laggards (leaders) gain precision.
                     </p>
@@ -72,8 +65,8 @@
                         little information but under high public scrutiny, particularly via cross-regional comparisons. We show
                         how comparisons induce herding of policymakers with popularity concerns and discuss its extent under
                         different scenarios. Policy contagion is stronger when shocks are sequential, more correlated, and
-                        popularity concerns are larger. Ex ante, it improves welfare, by disciplining biased policy agendas,
-                        but ex post, it can decrease welfare, by incentivizing acquiescing to a biased public consensus.
+                        popularity concerns are larger. Comparisons increase ex ante welfare, by disciplining biased policy agendas,
+                        but can decrease ex post welfare, by incentivizing acquiescing to a biased public consensus.
                     </p>
                 </div>
             </div>
