--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h3 class="name">JUAN SAGREDO</h3>
                 <div class="rightNavBar">
                     <a class="navLinks hover-underline-animation" href="#research">Research</a>
-                    <a class="navLinks hover-underline-animation" href="./files/cv_juan_sagredo.pdf">CV</a>
+                    <a class="navLinks hover-underline-animation" href="./files/juan_sagredo_resume.pdf">Resume</a>
                 </div>
             </div>
             <div class="bioContainer">
